// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel styled component extract basic 1`] = `
"import \\"./styled.test.emotion.css\\";
const H1 = styled(\\"h1\\", \\"styled-H1-1qcxcvu0\\", [\\"styled-H1-10x82eg\\"]);"
`;

exports[`babel styled component extract basic 2`] = `
".styled-H1-10x82eg {
    display: -webkit-box; display: -ms-flexbox; display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    width: var(--css-hash-0)
}
.styled-H1-10x82eg:hover {
    background-color: green
}
@media (max-width: 500px) {
    .styled-H1-10x82eg {
        height: var(--css-hash-1);
        position: fixed
    }
}
@media print {
    .styled-H1-10x82eg {
        display: none
    }
}
.styled-H1-10x82eg::before {
    color: blue;
    width: 20px;
    height: 20px;
    content: 'pseudo'
}"
`;

exports[`babel styled component extract no use 1`] = `
"import \\"./styled.test.emotion.css\\";
styled(\\"h1\\", \\"styled-yoisj70\\", [\\"styled-0\\"]);"
`;

exports[`babel styled component extract no use 2`] = `".styled-0 {}"`;

exports[`babel styled component inline basic 1`] = `
"const H1 = /*#__PURE__*/styled('h1', {
  id: 'css-H1-j3tbw30'
})\`font-size:\${fontSize + 'px'};\`;"
`;

exports[`babel styled component inline composition based on props 1`] = `
"const cls1 = /*#__PURE__*/css\`width:20px;\`;
const H1 = /*#__PURE__*/styled('h1', {
  id: 'css-H1-o65wtz0'
})\`\${props => {
  return props.a ? cssA : cssB;
}};font-size:\${fontSize + 'px'};height:20px;transform:translateX(\${props => props.translateX});\`;"
`;

exports[`babel styled component inline dynamic fns 1`] = `
"const Avatar = /*#__PURE__*/styled('img', {
  id: 'css-Avatar-1hdggep0'
})\`width:96px;height:96px;border-radius:\${props => props.theme.borderRadius};border:1px solid \${props => props.theme.borderColor};\`;"
`;

exports[`babel styled component inline function call 1`] = `
"/*#__PURE__*/styled(MyComponent, {
  id: 'css-10ih2xj0'
})\`font-size:\${fontSize + 'px'};\`;"
`;

exports[`babel styled component inline interpolation in different places 1`] = `
"
const H1 = /*#__PURE__*/styled('h1', {
  id: 'css-H1-1l6gcxd0'
})\`font-size:\${fontSize + 'px'};height:20px;transform:translateX(\${props => props.translateX});height1:\${something}wow;width:w\${something}ow;transform:translateX(\${props => props.translateX}) translateY(\${props => props.translateX});transform1:translateX(\${props => props.translateX}) translateY(\${props => props.translateX});transform2:translateX(\${props => props.translateX}) \${props => props.translateX};\`;"
`;

exports[`babel styled component inline media query 1`] = `
"const H1 = /*#__PURE__*/styled(\\"h1\\", \\"css-H1-bom4yv0\\", [], [], function createEmotionStyledRules() {
  return {
    \\"@media print\\": {
      \\"fontSize\\": \\"10pt\\"
    },
    \\"@media screen\\": {
      \\".child-selector\\": {
        \\"fontSize\\": \\"13px\\"
      }
    },
    \\"@media screen, print\\": {
      \\"&:hover + &\\": {
        \\"lineHeight\\": \\"1.2\\"
      }
    },
    \\"@media only screen   and (min-device-width: 320px)   and (max-device-width: 480px)  and (-webkit-min-device-pixel-ratio: 2)\\": {
      \\".child-selector\\": {
        \\"lineHeight\\": \\"1.4\\"
      }
    }
  };
});"
`;

exports[`babel styled component inline more than 10 dynamic values 1`] = `
"const H1 = /*#__PURE__*/styled('h1', {
      id: 'css-H1-1u8bj9j0'
})\`text-decoration:\${'underline'};border-right:solid blue \${54}px;background:\${'white'};color:\${'black'};display:\${'block'};border-radius:\${'3px'};padding:\${'25px'};width:\${'500px'};z-index:\${100};font-size:\${'18px'};text-align:\${'center'};border-left:\${p => p.theme.blue};\`;"
`;

exports[`babel styled component inline nested 1`] = `
"const H1 = /*#__PURE__*/styled('h1', {
  id: 'css-H1-uhwmvd0'
})\`font-size:\${fontSize + 'px'};& div{color:blue;}& div span{color:red;}\`;"
`;

exports[`babel styled component inline no dynamic 1`] = `
"/*#__PURE__*/styled(\\"h1\\", {
  id: \\"css-1aigf8e0\\"
})\`color:blue;\`;"
`;

exports[`babel styled component inline no use 1`] = `
"/*#__PURE__*/styled(\\"h1\\", {
  id: \\"css-19mybzz0\\"
})\`\`;"
`;

exports[`babel styled component inline objects based on props 1`] = `
"
const H1 = styled('h1', {
  id: 'css-H1-1pvkcq50'
})({ padding: 10 }, props => ({
  display: props.display
}));"
`;

exports[`babel styled component inline objects fn call 1`] = `
"
const H1 = styled('h1', {
  id: 'css-H1-1cjglvf0'
})({
  display: 'flex'
});"
`;

exports[`babel styled component inline objects prefixed 1`] = `
"
const H1 = styled('h1', {
  id: 'css-H1-u6tsls0'
})({
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
}, props => {
  padding: props.padding;
});"
`;

exports[`babel styled component inline random expressions 1`] = `
"
const a = () => /*#__PURE__*/css\`font-size:1rem;\`;
/*#__PURE__*/styled(\\"h1\\", {
  id: \\"css-19hcrvw0\\"
})\`margin:12px 48px;\${/*#__PURE__*/css\`font-size:32px;\`};color:#ffffff;\${{ backgroundColor: \\"hotpink\\" }};& .profile{\${props => props.prop && a()};}\`;"
`;

exports[`babel styled component inline shorthand property 1`] = `
"const H1 = styled(\\"h1\\", {
  id: \\"css-H1-1nz5j750\\"
})({ fontSize });"
`;

exports[`babel styled component inline styled component as selector 1`] = `
"
const SomeComponent = /*#__PURE__*/styled(\\"div\\", {
  id: \\"css-SomeComponent-srvsnn0\\"
})\`\`;
/*#__PURE__*/styled(\\"h1\\", {
  id: \\"css-srvsnn1\\"
})\`color:blue;& \${SomeComponent}{color:green;}\`;"
`;

exports[`babel styled component inline styled objects prefixed 1`] = `
"
const H1 = styled('h1', {
  id: 'css-H1-m5op4z0'
})({
  borderRadius: '50%',
  transition: 'transform 400ms ease-in-out',
  boxSizing: 'border-box',
  display: 'flex',
  ':hover': {
    transform: 'scale(1.2)'
  }
}, props => ({
  display: props.display
}));"
`;

exports[`babel styled component inline styled. objects 1`] = `
"
const H1 = styled(\\"h1\\", {
  id: \\"css-H1-bgkltw0\\"
})({ padding: 10 }, props => ({
  display: props.display
}));"
`;

exports[`babel styled component inline styled. objects with a multiple spread properties 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = styled(\\"figure\\", {
  id: \\"css-Figure-1nehw3m0\\"
})({
  ...defaultText,
  ...defaultFigure
});"
`;

exports[`babel styled component inline styled. objects with a multiple spread properties and other keys 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = styled('figure', {
  id: 'css-Figure-s2tr6d0'
})({
  ...defaultText,
  fontSize: '20px',
  ...defaultFigure,
  ...defaultText2
});"
`;

exports[`babel styled component inline styled. objects with a single spread property 1`] = `
"
const defaultText = { fontSize: 20 };
const Figure = styled(\\"figure\\", {
  id: \\"css-Figure-fiu9tt0\\"
})({
  ...defaultText
});"
`;

exports[`babel styled component renamed import: inline config rename 1`] = `
"/*#__PURE__*/what(\\"h1\\", \\"css-1jhrj9p0\\", [], [], function createEmotionStyledRules() {
  return {
    \\"color\\": \\"blue\\"
  };
});"
`;

exports[`babel styled component renamed import: inline variable import: no dynamic 1`] = `
"import what from 'emotion'; /*#__PURE__*/what('h1', 'css-nl5a7v0', [], [], function createEmotionStyledRules() {
  return {
    'color': 'blue'
  };
});"
`;
